--- a/index.html
+++ b/index.html
@@ -27,30 +27,30 @@
     <title>Shopping List Check Off</title>
   </head>
   <body>
-    
+
     <h1>Shopping List Check Off</h1>
     <!-- LIST #1 - To Buy Item -->
    <div  ng-controller='toBuyListController as list1' class="col-md-6">
      <h3>To Buy items:</h3>
 
      <ol>
-       <li ng-repeat="item in list1.items">Buy {{ item.itemQuantity }} {{ item.itemName }}
+       <li ng-repeat="item in list1.items">Buy {{ item.itemQuantity }} {{ item.itemName }} {{list1.message}}
          <button class="btn btn-default" ng-click="list1.buyToBoughtItems( item.itemQuantity,item.itemName,$index)">
            <span class="glyphicon glyphicon-ok"></span> Bought</button>
 
        </li>
      </ol>
-     <div ng-if="list1.message">{{list1.message}}</div>
+     <div ng-if="list1.items.length == 0">Everything is bought! </div>
 
    </div>
 
    <!-- LIST #2 - Already Bought -->
    <div ng-controller='boughtListController as list2' class="col-md-6">
      <h3>Already Bought:</h3>
-
+     <div ng-if="list2.items.length == 0">Nothing bought yet!</div>
      <ol>
-       <li ng-repeat="item in list2.items">
-      Bought {{ item.itemQuantity }} {{ item.itemName }}
+       <li ng-repeat="item1 in list2.items">
+      Bought {{ item1.itemQuantity }} {{ item1.itemName }}
       </li>
      </ol>
 
